replaced inconsistent hr tags with div tags, issues across different browsers. Aligned svg icons so they're perfect on the grass line.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,10 +23,6 @@ h6 {
   line-height: inherit;
 }
 
-hr:nth-of-type(2) {
-  margin-bottom: 0;
-}
-
 small {
   font-weight: 300;
 }
@@ -61,7 +57,7 @@ small {
   background: whitesmoke;
   color: black;
   padding: 8px 12px;
-  border: 3px solid #1B5E20;
+  border: 2px solid #1B5E20;
   border-radius: 4px;
   margin: 10px 0;
   text-decoration: none;
@@ -151,6 +147,27 @@ small {
   margin-bottom: -3px;
 }
 
+//Positioning svg's so they just touch the top of the grass line.
+.svg-icons > img:nth-child(2) {
+  position: relative;
+  top: -3px;
+}
+
+.svg-icons > img:nth-child(3) {
+  position: relative;
+  top: -1px;
+}
+
+.svg-icons > img:nth-child(4) {
+  position: relative;
+  top: -2px !important;
+}
+
+.svg-icons > img:nth-child(1), .svg-icons > img:nth-child(5), .svg-icons > img:nth-child(6) {
+  position: relative;
+  top: -2px;
+}
+
 .sources {
   display: flex;
   justify-content: center;
@@ -172,16 +189,6 @@ small {
 .svg-icons > img {
   height: 30px;
   width: 30px;
-}
-
-.svg-icons > img:last-of-type {
-  position: relative;
-  top: 2px;
-}
-
-.svg-icons > img:nth-of-type(4) {
-  position: relative;
-  top: -1px;
 }
 
 .ng-fa-icon {
